apply plugin: 'com.android.library'

android {
    compileSdkVersion project.compileSdkVersion
    buildToolsVersion project.buildToolsVersion

    defaultConfig {
        minSdkVersion project.minSdkVersion
        targetSdkVersion project.targetSdkVersion
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {

    implementation project(':base')
    implementation project(':fs')
    implementation project(':fs-media')
    implementation deps.recyclerview
    implementation deps.androidFragment
    implementation deps.androidAppcompat
    implementation deps.androidAnnotations
    implementation deps.kotlinStdlibJdk7
    implementation deps.androidMaterial

    androidTestImplementation project(':testing-fs')
    androidTestImplementation deps.androidTestRunner

    testImplementation deps.junit
    testImplementation deps.mockitoCore

}
